Fixed blurry menu items

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -10379,10 +10379,10 @@ li.mobile-third-lvl:last-child {
 }
 .menu-container .dropdown-menu > li > a {
   display: inline-block;
+  white-space: normal;
 }
 .dropdown-submenu {
   position: relative;
-  white-space: nowrap;
 }
 .dropdown-submenu a {
   display: inline-block;
@@ -10397,6 +10397,8 @@ li.mobile-third-lvl:last-child {
   transform: translateX(-50%);
   padding: 20px;
   box-shadow: 0 0px 20px rgba(0, 0, 0, 0.19), 0 3px 10px rgba(0, 0, 0, 0.23);
+  width: 218px;
+  /*Width is required to prevent the tranform/blurry-text bug */
 }
 .arrow_box:after,
 .arrow_box:before {
